while/tests/valid/Switch_Valid_1.while
int f(int x) {
    switch(x) {
        case 1:
            return 0;
        case 2:
            return -1;
    }
    return 10;
}

void main() {
    print f(1);
    print f(2);
    print f(3);
    print f(-1);
}
