while/tests/invalid-parsing/Parsing_Invalid_25.while
int f(int x) {
    switch(x) {
      case 1:
        int x = 0;
	return x;
    }
    return 0;
}
